# libdxmesh

./: .clang-format  CMakeLists.txt
cmake/: build.cmake  default_target_settings.cmake
include/: libdxmesh.h
source/: CMakeLists.txt  DirectXCollision.h  DirectXCollision.inl  DirectXColors.h  DirectXMath.h  DirectXMathConvert.inl  DirectXMathMatrix.inl  DirectXMathMisc.inl  DirectXMathVector.inl  DirectXMesh.h  DirectXMesh.inl  DirectXMeshAdjacency.cpp  DirectXMeshClean.cpp  DirectXMeshConcat.cpp  DirectXMeshGSAdjacency.cpp  DirectXMeshNormals.cpp  DirectXMeshOptimize.cpp  DirectXMeshOptimizeLRU.cpp  DirectXMeshOptimizeTVC.cpp  DirectXMeshP.h  DirectXMeshRemap.cpp  DirectXMeshTangentFrame.cpp  DirectXMeshUtil.cpp  DirectXMeshVBReader.cpp  DirectXMeshVBWriter.cpp  DirectXMeshValidate.cpp  DirectXMeshWeldVertices.cpp  DirectXMeshletGenerator.cpp  DirectXPackedVector.h  DirectXPackedVector.inl  api.cpp  defs.h  scoped.h
